--- a/websites/schoolmate/public/style.css
+++ b/websites/schoolmate/public/style.css
@@ -8,7 +8,7 @@
 html, body {
     height: 100%;
     margin: 0;
-    font-family: 'Poppins', Arial, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background: white;
     color: #333;
 }
@@ -36,9 +36,15 @@ html, body {
 }
 
 .signin-btn:hover {
-  background: #f1eeee;
+  background: #111010;
 }
 
+.admin-login{
+  list-style: none;
+  text-decoration: none;
+  color: #000000;
+
+}
 /* Navbar */
 .navbar {
   display: flex;
